--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 		<div class="popular-artists">
 			<div> <h4 class="font-all">Popular Artists</h4></div>
 
-			<div class="popular-artists-div">
+			<div class="popular-artists-div remove-scrollbar">
 				<div class="pop-artist-contrainer">
 					<a href="playlist.html"><img src="assets/img-5.jpg"></a>
 					<div>
