--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
 		<!-- Stations --------------- -->
 
-		<div class="stations">
+		<div class="stations remove-scrollbar">
 			<div class="stations-container">
 				<img src="assets/love.jpg">
 				<div class="text-center-image"><p>Love</p></div>
