--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 		<div class="english-songs">
 			<div> <h4 class="font-all">Latest English</h4></div>
 
-			<div class="english-songs-div">
+			<div class="english-songs-div remove-scrollbar">
 				<div class="pop-artist-contrainer">
 					<img src="assets/girl.jpg">
 					<div>
